the language of the whole app sould change when a user selects a languag

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -4,6 +4,65 @@
         "title": "আপনার শিল্পকে AI দিয়ে শক্তিশালী করুন",
         "subtitle": "Artisan আপনার অনন্য সৃষ্টি বর্ণনা করতে, বর্ণনা করতে এবং বিক্রি করতে সাহায্য করার জন্য বুদ্ধিমান সরঞ্জাম সরবরাহ করে। আপনার শিল্পে মনোযোগ দিন, আমরা শব্দগুলি পরিচালনা করব। আপনি আপনার কাজের জন্য সর্বোচ্চ মূল্য পান তা নিশ্চিত করতে আমরা একটি ন্যূনতম 1% ফি চার্জ করি।",
         "artisans_button": "কারিগরদের জন্য",
-        "buyers_button": "ক্রেতাদের জন্য"
+        "buyers_button": "ক্রেতাদের জন্য",
+        "login": "লগইন",
+        "signup": "সাইন আপ",
+        "features_title": "আধুনিক কারিগরের জন্য বৈশিষ্ট্য",
+        "features_subtitle": "ছবি থেকে গল্প পর্যন্ত, আমাদের AI আপনার কাজের আত্মাকে প্রদর্শন করার জন্য প্রশিক্ষিত।",
+        "feature_1_title": "AI চিত্র বিশ্লেষণ",
+        "feature_1_desc": "একটি ফটো আপলোড করুন এবং তাৎক্ষণিকভাবে একটি আকর্ষণীয় বিবরণ এবং ট্যাগ পান।",
+        "feature_2_title": "ভয়েস-টু-স্টোরি",
+        "feature_2_desc": "আপনার গল্প বলুন, এবং আমাদের AI এটিকে একটি চিত্তাকর্ষক বর্ণনায় পরিমার্জিত করবে।",
+        "feature_3_title": "স্মার্ট অ্যানালিটিক্স",
+        "feature_3_desc": "গ্রাহকরা কীভাবে আপনার পণ্যগুলির সাথে ইন্টারঅ্যাক্ট করছে তার অন্তর্দৃষ্টি পান।",
+        "feature_4_title": "কাস্টম অনুরোধ",
+        "feature_4_desc": "ক্রেতাদের কাছ থেকে সরাসরি কমিশন অনুরোধ গ্রহণ এবং পরিচালনা করুন।",
+        "art_title": "পরবর্তী প্রজন্মের জন্য সমসাময়িক ভারতীয় শিল্প",
+        "art_subtitle": "আধুনিক ভারতীয় শিল্পীদের আবিষ্কার করুন যারা একটি তাজা, প্রাণবন্ত দৃষ্টিভঙ্গির সাথে ঐতিহ্যকে নতুনভাবে সংজ্ঞায়িত করছে।",
+        "art_1_title": "ডিজিটাল পৌরাণিক কাহিনী",
+        "art_1_desc": "মহাকাব্যিক আখ্যানগুলিকে আধুনিক নান্দনিকতার সাথে মিশ্রিত করে ডিজিটাল চিত্রের মাধ্যমে প্রাচীন কাহিনীগুলি পুনরায় বলা হয়েছে।",
+        "art_2_title": "ভারতীয় রাস্তার শিল্প ফিউশন",
+        "art_2_desc": "ভারতীয় মোটিফ দিয়ে ತುಂಬানো গ্রাফিতি এবং স্টেনসিল শিল্প, শহুরে ক্যানভাসে সাহসী বিবৃতি তৈরি করে।",
+        "art_3_title": "মিনিমালিস্ট ফোক",
+        "art_3_desc": "ওয়ারলি এবং গোন্ডের মতো ঐতিহ্যবাহী লোক রূপগুলি, পরিষ্কার লাইন এবং একটি সমসাময়িক রঙের প্যালেট দিয়ে পুনরায় কল্পনা করা হয়েছে।",
+        "payments_title": "নমনীয় এবং নিরাপদ অর্থপ্রদান",
+        "payments_subtitle": "আমরা প্রত্যেকের জন্য লেনদেনকে নির্বিঘ্ন করতে বিভিন্ন ধরণের অর্থপ্রদানের পদ্ধতি সমর্থন করি। সমস্ত লেনদেন নিরাপদ এবং ভারতীয় প্রবিধানের সাথে সঙ্গতিপূর্ণ।",
+        "payments_extra": "...এবং আরও অনেক UPI, ক্রেডিট এবং ডেবিট কার্ড বিকল্প।",
+        "footer": "© {year} Artisan। সর্বস্বত্ব সংরক্ষিত।"
+    },
+    "login_page": {
+        "title": "আবার স্বাগতম",
+        "description": "চালিয়ে যেতে আপনার Artisan অ্যাকাউন্টে লগ ইন করুন",
+        "form_label": "ব্যবহারকারীর নাম, ইমেল বা ফোন",
+        "form_placeholder": "artisan_priya / m@example.com / 9876543210",
+        "password_label": "পাসওয়ার্ড",
+        "forgot_password": "আপনার পাসওয়ার্ড ভুলে গেছেন?",
+        "login_button": "লগইন",
+        "signup_link": "একটি অ্যাকাউন্ট নেই? সাইন আপ করুন"
+    },
+    "signup_page": {
+        "title": "একটি অ্যাকাউন্ট তৈরি করুন",
+        "description": "অনন্য কারুশিল্প বিক্রি বা কেনা শুরু করতে Artisan-এ যোগ দিন।",
+        "username_label": "ব্যবহারকারীর নাম",
+        "username_placeholder": "যেমন, ArtisanPriya",
+        "email_label": "ইমেল",
+        "email_placeholder": "m@example.com",
+        "phone_label": "ফোন নম্বর",
+        "phone_placeholder": "যেমন, 9876543210",
+        "create_password_label": "পাসওয়ার্ড তৈরি করুন",
+        "confirm_password_label": "পাসওয়ার্ড নিশ্চিত করুন",
+        "create_account_button": "অ্যাকাউন্ট তৈরি করুন",
+        "login_link": "ইতিমধ্যে একটি অ্যাকাউন্ট আছে? লগইন করুন"
+    },
+    "dashboard_layout": {
+        "menu_dashboard": "ড্যাশবোর্ড",
+        "menu_add_product": "পণ্য যোগ করুন",
+        "menu_analytics": "বিশ্লেষণ",
+        "menu_requests": "অনুরোধ",
+        "menu_support": "সমর্থন",
+        "account_menu_label": "আমার অ্যাকাউন্ট",
+        "account_menu_profile": "প্রোফাইল",
+        "account_menu_settings": "সেটিংস",
+        "account_menu_logout": "লগ আউট"
     }
 }
