--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -4,6 +4,65 @@
         "title": "AI के साथ अपनी कला को सशक्त बनाएं",
         "subtitle": "आर्टिसन आपको अपनी अनूठी रचनाओं का वर्णन करने, सुनाने और बेचने में मदद करने के लिए बुद्धिमान उपकरण प्रदान करता है। अपनी कला पर ध्यान केंद्रित करें, हम शब्दों को संभाल लेंगे। हम यह सुनिश्चित करने के लिए न्यूनतम 1% शुल्क लेते हैं कि आपको अपने काम का अधिकतम मूल्य मिले।",
         "artisans_button": "कारीगरों के लिए",
-        "buyers_button": "खरीदारों के लिए"
+        "buyers_button": "खरीदारों के लिए",
+        "login": "लॉग इन करें",
+        "signup": "साइन अप करें",
+        "features_title": "आधुनिक कारीगर के लिए सुविधाएँ",
+        "features_subtitle": "छवि से कहानी तक, हमारा AI आपके काम की आत्मा को प्रदर्शित करने के लिए प्रशिक्षित है।",
+        "feature_1_title": "AI छवि विश्लेषण",
+        "feature_1_desc": "एक तस्वीर अपलोड करें और तुरंत एकน่าสนใจ विवरण और टैग प्राप्त करें।",
+        "feature_2_title": "आवाज-से-कहानी",
+        "feature_2_desc": "अपनी कहानी बताएं, और हमारा AI इसे एक मनोरम कथा में परिष्कृत करेगा।",
+        "feature_3_title": "स्मार्ट एनालिटिक्स",
+        "feature_3_desc": "ग्राहक आपके उत्पादों के साथ कैसे इंटरैक्ट कर रहे हैं, इस पर जानकारी प्राप्त करें।",
+        "feature_4_title": "कस्टम अनुरोध",
+        "feature_4_desc": "सीधे खरीदारों से कमीशन अनुरोध प्राप्त करें और प्रबंधित करें।",
+        "art_title": "अगली पीढ़ी के लिए समकालीन भारतीय कला",
+        "art_subtitle": "आधुनिक भारतीय कलाकारों की खोज करें जो एक ताजा, जीवंत दृष्टिकोण के साथ परंपरा को फिर से परिभाषित कर रहे हैं।",
+        "art_1_title": "डिजिटल पौराणिक कथाएं",
+        "art_1_desc": "महाकाव्य कथाओं को आधुनिक सौंदर्यशास्त्र के साथ मिलाकर डिजिटल चित्रण के माध्यम से प्राचीन कथाओं को फिर से बताया गया।",
+        "art_2_title": "भारतीय स्ट्रीट आर्ट फ्यूजन",
+        "art_2_desc": "भारतीय रूपांकनों से युक्त भित्तिचित्र और स्टेंसिल कला, शहरी कैनवस पर बोल्ड बयान देते हैं।",
+        "art_3_title": "न्यूनतम लोक",
+        "art_3_desc": "वर्ली और गोंड जैसे पारंपरिक लोक रूपों को स्वच्छ रेखाओं और समकालीन रंग पैलेट के साथ फिर से कल्पना की गई।",
+        "payments_title": "लचीला और सुरक्षित भुगतान",
+        "payments_subtitle": "हम सभी के लिए लेनदेन को सहज बनाने के लिए भुगतान विधियों की एक विस्तृत श्रृंखला का समर्थन करते हैं। सभी लेनदेन सुरक्षित और भारतीय नियमों के अनुरूप हैं।",
+        "payments_extra": "...और कई अन्य UPI, क्रेडिट और डेबिट कार्ड विकल्प।",
+        "footer": "© {year} आर्टिसन। सर्वाधिकार सुरक्षित।"
+    },
+     "login_page": {
+        "title": "वापसी पर स्वागत है",
+        "description": "जारी रखने के लिए अपने आर्टिसन खाते में लॉग इन करें",
+        "form_label": "उपयोगकर्ता नाम, ईमेल, या फ़ोन",
+        "form_placeholder": "कारीगर_प्रिया / m@example.com / 9876543210",
+        "password_label": "पासवर्ड",
+        "forgot_password": "अपना पासवर्ड भूल गए?",
+        "login_button": "लॉग इन करें",
+        "signup_link": "खाता नहीं है? साइन अप करें"
+    },
+    "signup_page": {
+        "title": "खाता बनाएं",
+        "description": "अद्वितीय शिल्प बेचना या खरीदना शुरू करने के लिए आर्टिसन से जुड़ें।",
+        "username_label": "उपयोगकर्ता नाम",
+        "username_placeholder": "उदा., ArtisanPriya",
+        "email_label": "ईमेल",
+        "email_placeholder": "m@example.com",
+        "phone_label": "फ़ोन नंबर",
+        "phone_placeholder": "उदा., 9876543210",
+        "create_password_label": "पासवर्ड बनाएं",
+        "confirm_password_label": "पासवर्ड की पुष्टि करें",
+        "create_account_button": "खाता बनाएं",
+        "login_link": "पहले से ही एक खाता है? लॉग इन करें"
+    },
+    "dashboard_layout": {
+        "menu_dashboard": "डैशबोर्ड",
+        "menu_add_product": "उत्पाद जोड़ें",
+        "menu_analytics": "एनालिटिक्स",
+        "menu_requests": "अनुरोध",
+        "menu_support": "समर्थन",
+        "account_menu_label": "मेरा खाता",
+        "account_menu_profile": "प्रोफ़ाइल",
+        "account_menu_settings": "सेटिंग्स",
+        "account_menu_logout": "लॉग आउट"
     }
 }
