--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -4,6 +4,65 @@
         "title": "Empower Your Craft with AI",
         "subtitle": "Artisan provides intelligent tools to help you describe, narrate, and sell your unique creations. Focus on your art, we'll handle the words. We charge a minimal 1% fee to ensure you get the maximum value for your work.",
         "artisans_button": "For Artisans",
-        "buyers_button": "For Buyers"
+        "buyers_button": "For Buyers",
+        "login": "Login",
+        "signup": "Sign Up",
+        "features_title": "Features for the Modern Artisan",
+        "features_subtitle": "From image to story, our AI is trained to showcase the soul of your work.",
+        "feature_1_title": "AI Image Analysis",
+        "feature_1_desc": "Upload a photo and get a compelling description and tags instantly.",
+        "feature_2_title": "Voice-to-Story",
+        "feature_2_desc": "Tell your story, and our AI will refine it into a captivating narrative.",
+        "feature_3_title": "Smart Analytics",
+        "feature_3_desc": "Get insights on how customers are interacting with your products.",
+        "feature_4_title": "Custom Requests",
+        "feature_4_desc": "Receive and manage commission requests directly from buyers.",
+        "art_title": "Contemporary Indian Art for the Next Generation",
+        "art_subtitle": "Discover modern Indian artists who are redefining tradition with a fresh, vibrant perspective.",
+        "art_1_title": "Digital Mythology",
+        "art_1_desc": "Ancient tales retold through digital illustration, blending epic narratives with modern aesthetics.",
+        "art_2_title": "Indian Street Art Fusion",
+        "art_2_desc": "Graffiti and stencil art infused with Indian motifs, creating bold statements on urban canvases.",
+        "art_3_title": "Minimalist Folk",
+        "art_3_desc": "Traditional folk forms like Warli and Gond, reimagined with clean lines and a contemporary color palette.",
+        "payments_title": "Flexible & Secure Payments",
+        "payments_subtitle": "We support a wide range of payment methods to make transactions seamless for everyone. All transactions are secure and compliant with Indian regulations.",
+        "payments_extra": "...and many more UPI, credit, and debit card options.",
+        "footer": "© {year} Artisan. All rights reserved."
+    },
+    "login_page": {
+        "title": "Welcome Back",
+        "description": "Log in to your Artisan account to continue",
+        "form_label": "Username, Email, or Phone",
+        "form_placeholder": "artisan_priya / m@example.com / 9876543210",
+        "password_label": "Password",
+        "forgot_password": "Forgot your password?",
+        "login_button": "Login",
+        "signup_link": "Don't have an account? Sign up"
+    },
+    "signup_page": {
+        "title": "Create an Account",
+        "description": "Join Artisan to start selling or buying unique crafts.",
+        "username_label": "Username",
+        "username_placeholder": "e.g., ArtisanPriya",
+        "email_label": "Email",
+        "email_placeholder": "m@example.com",
+        "phone_label": "Phone Number",
+        "phone_placeholder": "e.g., 9876543210",
+        "create_password_label": "Create Password",
+        "confirm_password_label": "Confirm Password",
+        "create_account_button": "Create Account",
+        "login_link": "Already have an account? Login"
+    },
+    "dashboard_layout": {
+        "menu_dashboard": "Dashboard",
+        "menu_add_product": "Add Product",
+        "menu_analytics": "Analytics",
+        "menu_requests": "Requests",
+        "menu_support": "Support",
+        "account_menu_label": "My Account",
+        "account_menu_profile": "Profile",
+        "account_menu_settings": "Settings",
+        "account_menu_logout": "Log out"
     }
 }
