--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -4,6 +4,65 @@
         "title": "तुमच्या कलेला AI ने सशक्त करा",
         "subtitle": "आर्टिसन तुम्हाला तुमच्या अद्वितीय निर्मितीचे वर्णन करण्यास, कथन करण्यास आणि विकण्यास मदत करण्यासाठी बुद्धिमान साधने प्रदान करते. तुमच्या कलेवर लक्ष केंद्रित करा, आम्ही शब्द हाताळू. तुम्हाला तुमच्या कामाचे जास्तीत जास्त मूल्य मिळावे यासाठी आम्ही किमान 1% शुल्क आकारतो.",
         "artisans_button": "कलाकारांसाठी",
-        "buyers_button": "खरेदीदारांसाठी"
+        "buyers_button": "खरेदीदारांसाठी",
+        "login": "लॉगिन",
+        "signup": "साइन अप",
+        "features_title": "आधुनिक कलाकारांसाठी वैशिष्ट्ये",
+        "features_subtitle": "प्रतिमेपासून कथेपर्यंत, आमचे AI तुमच्या कामाचा आत्मा प्रदर्शित करण्यासाठी प्रशिक्षित आहे.",
+        "feature_1_title": "AI प्रतिमा विश्लेषण",
+        "feature_1_desc": "एक फोटो अपलोड करा आणि त्वरित आकर्षक वर्णन आणि टॅग मिळवा.",
+        "feature_2_title": "व्हॉइस-टू-स्टोरी",
+        "feature_2_desc": "तुमची कथा सांगा, आणि आमचे AI तिला एका आकर्षक कथनात परिष्कृत करेल.",
+        "feature_3_title": "स्मार्ट विश्लेषण",
+        "feature_3_desc": "ग्राहक तुमच्या उत्पादनांशी कसे संवाद साधत आहेत याबद्दल अंतर्दृष्टी मिळवा.",
+        "feature_4_title": "सानुकूल विनंत्या",
+        "feature_4_desc": "थेट खरेदीदारांकडून कमिशन विनंत्या प्राप्त करा आणि व्यवस्थापित करा.",
+        "art_title": "पुढील पिढीसाठी समकालीन भारतीय कला",
+        "art_subtitle": "नवीन, उत्साही दृष्टिकोनाने परंपरेला पुन्हा परिभाषित करणाऱ्या आधुनिक भारतीय कलाकारांना शोधा.",
+        "art_1_title": "डिजिटल पौराणिक कथा",
+        "art_1_desc": "महाकाव्य कथांना आधुनिक सौंदर्यशास्त्रासह मिश्रित करून डिजिटल चित्रणाद्वारे प्राचीन कथा पुन्हा सांगितल्या जातात.",
+        "art_2_title": "भारतीय स्ट्रीट आर्ट फ्यूजन",
+        "art_2_desc": "भारतीय आकृतिबंधांनी भरलेले ग्राफिटी आणि स्टेन्सिल आर्ट, शहरी कॅनव्हासवर ठळक विधाने करतात.",
+        "art_3_title": "मिनिमलिस्ट लोक",
+        "art_3_desc": "वारली आणि गोंड सारखे पारंपारिक लोक प्रकार, स्वच्छ रेषा आणि समकालीन रंग पॅलेटसह पुन्हा कल्पना केलेले.",
+        "payments_title": "लवचिक आणि सुरक्षित पेमेंट",
+        "payments_subtitle": "आम्ही प्रत्येकासाठी व्यवहार अखंड करण्यासाठी पेमेंट पद्धतींची विस्तृत श्रेणी समर्थित करतो. सर्व व्यवहार सुरक्षित आणि भारतीय नियमांनुसार आहेत.",
+        "payments_extra": "...आणि बरेच UPI, क्रेडिट आणि डेबिट कार्ड पर्याय.",
+        "footer": "© {year} आर्टिसन. सर्व हक्क राखीव."
+    },
+    "login_page": {
+        "title": "पुन्हा स्वागत आहे",
+        "description": "सुरू ठेवण्यासाठी तुमच्या आर्टिसन खात्यात लॉग इन करा",
+        "form_label": "वापरकर्तानाव, ईमेल किंवा फोन",
+        "form_placeholder": "artisan_priya / m@example.com / 9876543210",
+        "password_label": "पासवर्ड",
+        "forgot_password": "तुमचा पासवर्ड विसरलात?",
+        "login_button": "लॉगिन",
+        "signup_link": "खाते नाही? साइन अप करा"
+    },
+    "signup_page": {
+        "title": "एक खाते तयार करा",
+        "description": "अद्वितीय हस्तकला विकणे किंवा खरेदी करणे सुरू करण्यासाठी आर्टिसनमध्ये सामील व्हा.",
+        "username_label": "वापरकर्तानाव",
+        "username_placeholder": "उदा. ArtisanPriya",
+        "email_label": "ईमेल",
+        "email_placeholder": "m@example.com",
+        "phone_label": "फोन नंबर",
+        "phone_placeholder": "उदा. 9876543210",
+        "create_password_label": "पासवर्ड तयार करा",
+        "confirm_password_label": "पासवर्डची पुष्टी करा",
+        "create_account_button": "खाते तयार करा",
+        "login_link": "आधीपासूनच खाते आहे? लॉगिन करा"
+    },
+    "dashboard_layout": {
+        "menu_dashboard": "डॅशबोर्ड",
+        "menu_add_product": "उत्पादन जोडा",
+        "menu_analytics": "विश्लेषण",
+        "menu_requests": "विनंत्या",
+        "menu_support": "समर्थन",
+        "account_menu_label": "माझे खाते",
+        "account_menu_profile": "प्रोफाइल",
+        "account_menu_settings": "सेटिंग्ज",
+        "account_menu_logout": "लॉग आउट"
     }
 }
