--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -4,6 +4,65 @@
         "title": "உங்கள் கைவினைக்கு AI மூலம் శక్తి அளியுங்கள்",
         "subtitle": "Artisan உங்கள் தனித்துவமான படைப்புகளை விவரிக்கவும், விவரிக்கவும் மற்றும் விற்கவும் உதவும் புத்திசாலித்தனமான கருவிகளை வழங்குகிறது. உங்கள் கலையில் கவனம் செலுத்துங்கள், நாங்கள் வார்த்தைகளைக் கையாளுவோம். உங்கள் வேலைக்கு அதிகபட்ச மதிப்பைப் பெறுவதை உறுதிசெய்ய நாங்கள் குறைந்தபட்சம் 1% கட்டணம் வசூலிக்கிறோம்.",
         "artisans_button": "கைவினைஞர்களுக்காக",
-        "buyers_button": "வாங்குபவர்களுக்காக"
+        "buyers_button": "வாங்குபவர்களுக்காக",
+        "login": "உள்நுழை",
+        "signup": "பதிவுபெறு",
+        "features_title": "நவீன கைவினைஞருக்கான அம்சங்கள்",
+        "features_subtitle": "படத்திலிருந்து கதை வரை, எங்கள் AI உங்கள் வேலையின் ஆன்மாவைக் காட்ட பயிற்சி அளிக்கப்படுகிறது.",
+        "feature_1_title": "AI பட பகுப்பாய்வு",
+        "feature_1_desc": "ஒரு புகைப்படத்தைப் பதிவேற்றி, உடனடியாக ஒரு கவர்ச்சிகரமான விளக்கத்தையும் குறிச்சொற்களையும் பெறுங்கள்.",
+        "feature_2_title": "குரல்-க்கு-கதை",
+        "feature_2_desc": "உங்கள் கதையைச் சொல்லுங்கள், எங்கள் AI அதை ஒரு வசீகரிக்கும் വിവരണமாகச் செம்மைப்படுத்தும்.",
+        "feature_3_title": "ஸ்மார்ட் பகுப்பாய்வு",
+        "feature_3_desc": "வாடிக்கையாளர்கள் உங்கள் தயாரிப்புகளுடன் எவ்வாறு தொடர்பு கொள்கிறார்கள் என்பது குறித்த நுண்ணறிவுகளைப் பெறுங்கள்.",
+        "feature_4_title": "தனிப்பயன் கோரிக்கைகள்",
+        "feature_4_desc": "வாங்குபவர்களிடமிருந்து நேரடியாக கமிஷன் கோரிக்கைகளைப் பெற்று நிர்வகிக்கவும்.",
+        "art_title": "அடுத்த தலைமுறைக்கான சமகால இந்தியக் கலை",
+        "art_subtitle": "புதிய, துடிப்பான கண்ணோட்டத்துடன் பாரம்பரியத்தை மறுவரையறை செய்யும் நவீன இந்தியக் கலைஞர்களைக் கண்டறியவும்.",
+        "art_1_title": "டிஜிட்டல் புராணம்",
+        "art_1_desc": "காவியக் கதைகளை நவீன அழகியலுடன் கலந்து டிஜிட்டல் иллюстрация மூலம் மீண்டும் சொல்லப்பட்ட பழங்காலக் கதைகள்.",
+        "art_2_title": "இந்தியத் தெருக் கலை இணைவு",
+        "art_2_desc": "இந்திய உருவங்களுடன் உட்செலுத்தப்பட்ட கிராஃபிட்டி மற்றும் ஸ்டென்சில் கலை, நகர்ப்புற கேன்வாஸ்களில் தைரியமான அறிக்கைகளை உருவாக்குகிறது.",
+        "art_3_title": "மினிமலிஸ்ட் நாட்டுப்புறம்",
+        "art_3_desc": "வார்லி மற்றும் கோண்ட் போன்ற பாரம்பரிய நாட்டுப்புற வடிவங்கள், சுத்தமான கோடுகள் மற்றும் சமகால வண்ணத் தட்டுகளுடன் மீண்டும் கற்பனை செய்யப்பட்டன.",
+        "payments_title": "நெகிழ்வான மற்றும் பாதுகாப்பான கொடுப்பனவுகள்",
+        "payments_subtitle": "அனைவருக்கும் பரிவர்த்தனைகளைத் தடையின்றிச் செய்ய நாங்கள் பரந்த அளவிலான கட்டண முறைகளை ஆதரிக்கிறோம். அனைத்து பரிவர்த்தனைகளும் பாதுகாப்பானவை மற்றும் இந்திய விதிமுறைகளுக்கு இணங்க உள்ளன.",
+        "payments_extra": "...மற்றும் பல UPI, கிரெடிட் மற்றும் டெபிட் கார்டு விருப்பங்கள்.",
+        "footer": "© {year} Artisan. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை."
+    },
+    "login_page": {
+        "title": "மீண்டும் வருக",
+        "description": "தொடர உங்கள் Artisan கணக்கில் உள்நுழையவும்",
+        "form_label": "பயனர்பெயர், மின்னஞ்சல் அல்லது தொலைபேசி",
+        "form_placeholder": "artisan_priya / m@example.com / 9876543210",
+        "password_label": "கடவுச்சொல்",
+        "forgot_password": "உங்கள் கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
+        "login_button": "உள்நுழை",
+        "signup_link": "கணக்கு இல்லையா? பதிவுபெறு"
+    },
+    "signup_page": {
+        "title": "ஒரு கணக்கை உருவாக்கவும்",
+        "description": "தனித்துவமான கைவினைப்பொருட்களை விற்க அல்லது வாங்க Artisan இல் சேரவும்.",
+        "username_label": "பயனர்பெயர்",
+        "username_placeholder": "எ.கா., ArtisanPriya",
+        "email_label": "மின்னஞ்சல்",
+        "email_placeholder": "m@example.com",
+        "phone_label": "தொலைபேசி எண்",
+        "phone_placeholder": "எ.கா., 9876543210",
+        "create_password_label": "கடவுச்சொல்லை உருவாக்கவும்",
+        "confirm_password_label": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
+        "create_account_button": "கணக்கை உருவாக்கவும்",
+        "login_link": "ஏற்கனவே கணக்கு உள்ளதா? உள்நுழைக"
+    },
+    "dashboard_layout": {
+        "menu_dashboard": "டாஷ்போர்டு",
+        "menu_add_product": "தயாரிப்பைச் சேர்",
+        "menu_analytics": "பகுப்பாய்வு",
+        "menu_requests": "கோரிக்கைகள்",
+        "menu_support": "ஆதரவு",
+        "account_menu_label": "என் கணக்கு",
+        "account_menu_profile": "சுயவிவரம்",
+        "account_menu_settings": "அமைப்புகள்",
+        "account_menu_logout": "வெளியேறு"
     }
 }
