--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -4,6 +4,65 @@
         "title": "మీ కళను AIతో శక్తివంతం చేయండి",
         "subtitle": "ఆర్టిసాన్ మీ ప్రత్యేకమైన సృష్టిలను వివరించడానికి, కథనం చేయడానికి మరియు విక్రయించడానికి మీకు సహాయపడటానికి తెలివైన సాధనాలను అందిస్తుంది. మీ కళపై దృష్టి పెట్టండి, మేము పదాలను నిర్వహిస్తాము. మీ పనికి గరిష్ట విలువను పొందేలా మేము కనీసం 1% రుసుమును వసూలు చేస్తాము.",
         "artisans_button": "కళాకారుల కోసం",
-        "buyers_button": "కొనుగోలుదారుల కోసం"
+        "buyers_button": "కొనుగోలుదారుల కోసం",
+        "login": "లాగిన్",
+        "signup": "సైన్ అప్ చేయండి",
+        "features_title": "ఆధునిక కళాకారుడి కోసం ఫీచర్లు",
+        "features_subtitle": "చిత్రం నుండి కథ వరకు, మా AI మీ పని యొక్క ఆత్మను ప్రదర్శించడానికి శిక్షణ పొందింది.",
+        "feature_1_title": "AI చిత్ర విశ్లేషణ",
+        "feature_1_desc": "ఒక ఫోటోను అప్‌లోడ్ చేయండి మరియు తక్షణమే ఆకర్షణీయమైన వివరణ మరియు ట్యాగ్‌లను పొందండి.",
+        "feature_2_title": "వాయిస్-టు-స్టోరీ",
+        "feature_2_desc": "మీ కథను చెప్పండి మరియు మా AI దానిని ఆకర్షణీయమైన కథనంగా మెరుగుపరుస్తుంది.",
+        "feature_3_title": "స్మార్ట్ అనలిటిక్స్",
+        "feature_3_desc": "కస్టమర్‌లు మీ ఉత్పత్తులతో ఎలా సంకర్షణ చెందుతున్నారనే దానిపై అంతర్దృష్టులను పొందండి.",
+        "feature_4_title": "అనుకూల అభ్యర్థనలు",
+        "feature_4_desc": "నేరుగా కొనుగోలుదారుల నుండి కమీషన్ అభ్యర్థనలను స్వీకరించండి మరియు నిర్వహించండి.",
+        "art_title": "తదుపరి తరం కోసం సమకాలీన భారతీయ కళ",
+        "art_subtitle": "తాజా, ఉత్సాహభరితమైన దృక్పథంతో సంప్రదాయాన్ని పునర్నిర్వచించే ఆధునిక భారతీయ కళాకారులను కనుగొనండి.",
+        "art_1_title": "డిజిటల్ పురాణం",
+        "art_1_desc": "పురాణ కథనాలను ఆధునిక సౌందర్యంతో మిళితం చేసి డిజిటల్ ఇలస్ట్రేషన్ ద్వారా పురాతన కథలు తిరిగి చెప్పబడ్డాయి.",
+        "art_2_title": "ఇండియన్ స్ట్రీట్ ఆర్ట్ ఫ్యూజన్",
+        "art_2_desc": "భారతీయ మూలాంశాలతో నిండిన గ్రాఫిటీ మరియు స్టెన్సిల్ కళ, పట్టణ కాన్వాసులపై ధైర్యమైన ప్రకటనలు చేస్తుంది.",
+        "art_3_title": "మినిమలిస్ట్ జానపదం",
+        "art_3_desc": "వార్లీ మరియు గోండ్ వంటి సాంప్రదాయ జానపద రూపాలు, శుభ్రమైన గీతలు మరియు సమకాలీన రంగుల పాలెట్‌తో పునఃరూపకల్పన చేయబడ్డాయి.",
+        "payments_title": "ఫ్లెక్సిబుల్ & సురక్షిత చెల్లింపులు",
+        "payments_subtitle": "ప్రతిఒక్కరికీ లావాదేవీలను అతుకులు లేకుండా చేయడానికి మేము విస్తృత శ్రేణి చెల్లింపు పద్ధతులకు మద్దతు ఇస్తాము. అన్ని లావాదేవీలు సురక్షితమైనవి మరియు భారతీయ నిబంధనలకు అనుగుణంగా ఉంటాయి.",
+        "payments_extra": "...మరియు మరిన్ని UPI, క్రెడిట్ మరియు డెబిట్ కార్డ్ ఎంపికలు.",
+        "footer": "© {year} ఆర్టిసాన్. అన్ని హక్కులు ప్రత్యేకించబడ్డాయి."
+    },
+    "login_page": {
+        "title": " తిరిగి స్వాగతం",
+        "description": "కొనసాగించడానికి మీ ఆర్టిసాన్ ఖాతాకు లాగిన్ చేయండి",
+        "form_label": "వినియోగదారు పేరు, ఇమెయిల్ లేదా ఫోన్",
+        "form_placeholder": "artisan_priya / m@example.com / 9876543210",
+        "password_label": "పాస్‌వర్డ్",
+        "forgot_password": "మీ పాస్‌వర్డ్‌ను మర్చిపోయారా?",
+        "login_button": "లాగిన్",
+        "signup_link": "ఖాతా లేదా? సైన్ అప్ చేయండి"
+    },
+    "signup_page": {
+        "title": "ఖాతాను సృష్టించండి",
+        "description": "ప్రత్యేకమైన చేతిపనులను విక్రయించడం లేదా కొనడం ప్రారంభించడానికి ఆర్టిసాన్‌లో చేరండి.",
+        "username_label": "వినియోగదారు పేరు",
+        "username_placeholder": "ఉదా., ArtisanPriya",
+        "email_label": "ఇమెయిల్",
+        "email_placeholder": "m@example.com",
+        "phone_label": "ఫోను నంబరు",
+        "phone_placeholder": "ఉదా., 9876543210",
+        "create_password_label": "పాస్‌వర్డ్‌ను సృష్టించండి",
+        "confirm_password_label": "పాస్‌వర్డ్‌ను నిర్ధారించండి",
+        "create_account_button": "ఖాతాను సృష్టించండి",
+        "login_link": "ఇప్పటికే ఖాతా ఉందా? లాగిన్"
+    },
+    "dashboard_layout": {
+        "menu_dashboard": "డాష్‌బోర్డ్",
+        "menu_add_product": "ఉత్పత్తిని జోడించండి",
+        "menu_analytics": "విశ్లేషణలు",
+        "menu_requests": "అభ్యర్థనలు",
+        "menu_support": "మద్దతు",
+        "account_menu_label": "నా ఖాతా",
+        "account_menu_profile": "ప్రొఫైల్",
+        "account_menu_settings": "సెట్టింగ్‌లు",
+        "account_menu_logout": "లాగ్ అవుట్"
     }
 }
