add some features on training user on digital marketing  and helping the

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -59,6 +59,7 @@
         "menu_add_product": "পণ্য যোগ করুন",
         "menu_analytics": "বিশ্লেষণ",
         "menu_requests": "অনুরোধ",
+        "menu_marketing": "বিপণন হাব",
         "menu_support": "সমর্থন",
         "account_menu_label": "আমার অ্যাকাউন্ট",
         "account_menu_profile": "প্রোফাইল",
