--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -59,6 +59,7 @@
         "menu_add_product": "Add Product",
         "menu_analytics": "Analytics",
         "menu_requests": "Requests",
+        "menu_marketing": "Marketing Hub",
         "menu_support": "Support",
         "account_menu_label": "My Account",
         "account_menu_profile": "Profile",
