--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -59,6 +59,7 @@
         "menu_add_product": "उत्पाद जोड़ें",
         "menu_analytics": "एनालिटिक्स",
         "menu_requests": "अनुरोध",
+        "menu_marketing": "मार्केटिंग हब",
         "menu_support": "समर्थन",
         "account_menu_label": "मेरा खाता",
         "account_menu_profile": "प्रोफ़ाइल",
