--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -59,6 +59,7 @@
         "menu_add_product": "उत्पादन जोडा",
         "menu_analytics": "विश्लेषण",
         "menu_requests": "विनंत्या",
+        "menu_marketing": "विपणन केंद्र",
         "menu_support": "समर्थन",
         "account_menu_label": "माझे खाते",
         "account_menu_profile": "प्रोफाइल",
