--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -59,6 +59,7 @@
         "menu_add_product": "தயாரிப்பைச் சேர்",
         "menu_analytics": "பகுப்பாய்வு",
         "menu_requests": "கோரிக்கைகள்",
+        "menu_marketing": "சந்தைப்படுத்தல் மையம்",
         "menu_support": "ஆதரவு",
         "account_menu_label": "என் கணக்கு",
         "account_menu_profile": "சுயவிவரம்",
