--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -59,6 +59,7 @@
         "menu_add_product": "ఉత్పత్తిని జోడించండి",
         "menu_analytics": "విశ్లేషణలు",
         "menu_requests": "అభ్యర్థనలు",
+        "menu_marketing": "మార్కెటింగ్ హబ్",
         "menu_support": "మద్దతు",
         "account_menu_label": "నా ఖాతా",
         "account_menu_profile": "ప్రొఫైల్",
