add an option for verifying  govt issued document for  security to ensur

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -49,6 +49,9 @@
         "email_placeholder": "m@example.com",
         "phone_label": "ফোন নম্বর",
         "phone_placeholder": "যেমন, 9876543210",
+        "gov_id_label": "সরকারি আইডি যাচাইকরণ",
+        "gov_id_description": "নিরাপত্তা নিশ্চিত করতে এবং জালিয়াতি রোধ করতে, অনুগ্রহ করে একটি সরকারি আইডি (যেমন, আধার, প্যান) আপলোড করুন।",
+        "upload_prompt": "আপলোড করতে ফাইলে ক্লিক করুন বা টেনে আনুন",
         "create_password_label": "পাসওয়ার্ড তৈরি করুন",
         "confirm_password_label": "পাসওয়ার্ড নিশ্চিত করুন",
         "create_account_button": "অ্যাকাউন্ট তৈরি করুন",
