--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -49,6 +49,9 @@
         "email_placeholder": "m@example.com",
         "phone_label": "Phone Number",
         "phone_placeholder": "e.g., 9876543210",
+        "gov_id_label": "Government ID Verification",
+        "gov_id_description": "To ensure security and prevent fraud, please upload a government-issued ID (e.g., Aadhar, PAN).",
+        "upload_prompt": "Click or drag file to upload",
         "create_password_label": "Create Password",
         "confirm_password_label": "Confirm Password",
         "create_account_button": "Create Account",
