--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -49,6 +49,9 @@
         "email_placeholder": "m@example.com",
         "phone_label": "फोन नंबर",
         "phone_placeholder": "उदा. 9876543210",
+        "gov_id_label": "सरकारी ओळखपत्र पडताळणी",
+        "gov_id_description": "सुरक्षितता सुनिश्चित करण्यासाठी आणि फसवणूक टाळण्यासाठी, कृपया सरकारी ओळखपत्र (उदा. आधार, पॅन) अपलोड करा.",
+        "upload_prompt": "अपलोड करण्यासाठी फाइलवर क्लिक करा किंवा ड्रॅग करा",
         "create_password_label": "पासवर्ड तयार करा",
         "confirm_password_label": "पासवर्डची पुष्टी करा",
         "create_account_button": "खाते तयार करा",
