--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -49,6 +49,9 @@
         "email_placeholder": "m@example.com",
         "phone_label": "தொலைபேசி எண்",
         "phone_placeholder": "எ.கா., 9876543210",
+        "gov_id_label": "அரசு அடையாள அட்டை சரிபார்ப்பு",
+        "gov_id_description": "பாதுகாப்பை உறுதி செய்வதற்கும் மோசடியைத் தடுப்பதற்கும், தயவுசெய்து அரசு வழங்கிய அடையாள அட்டையை (எ.கா. ஆதார், பான்) பதிவேற்றவும்.",
+        "upload_prompt": "பதிவேற்ற கோப்பைக் கிளிக் செய்யவும் அல்லது இழுக்கவும்",
         "create_password_label": "கடவுச்சொல்லை உருவாக்கவும்",
         "confirm_password_label": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
         "create_account_button": "கணக்கை உருவாக்கவும்",
