--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -49,6 +49,9 @@
         "email_placeholder": "m@example.com",
         "phone_label": "ఫోను నంబరు",
         "phone_placeholder": "ఉదా., 9876543210",
+        "gov_id_label": "ప్రభుత్వ ID ధృవీకరణ",
+        "gov_id_description": "భద్రతను నిర్ధారించడానికి మరియు మోసాన్ని నివారించడానికి, దయచేసి ప్రభుత్వ-జారీ చేసిన IDని (ఉదా., ఆధార్, పాన్) అప్‌లోడ్ చేయండి.",
+        "upload_prompt": "అప్‌లోడ్ చేయడానికి ఫైల్‌పై క్లిక్ చేయండి లేదా లాగండి",
         "create_password_label": "పాస్‌వర్డ్‌ను సృష్టించండి",
         "confirm_password_label": "పాస్‌వర్డ్‌ను నిర్ధారించండి",
         "create_account_button": "ఖాతాను సృష్టించండి",
