--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -49,9 +49,6 @@
         "email_placeholder": "m@example.com",
         "phone_label": "தொலைபேசி எண்",
         "phone_placeholder": "எ.கா., 9876543210",
-        "gov_id_label": "அரசு அடையாள அட்டை சரிபார்ப்பு",
-        "gov_id_description": "பாதுகாப்பை உறுதி செய்வதற்கும் மோசடியைத் தடுப்பதற்கும், தயவுசெய்து அரசு வழங்கிய அடையாள அட்டையை (எ.கா. ஆதார், பான்) பதிவேற்றவும்.",
-        "upload_prompt": "பதிவேற்ற கோப்பைக் கிளிக் செய்யவும் அல்லது இழுக்கவும்",
         "create_password_label": "கடவுச்சொல்லை உருவாக்கவும்",
         "confirm_password_label": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
         "create_account_button": "கணக்கை உருவாக்கவும்",
@@ -65,8 +62,19 @@
         "menu_marketing": "சந்தைப்படுத்தல் மையம்",
         "menu_support": "ஆதரவு",
         "account_menu_label": "என் கணக்கு",
+        "account_menu_verify": "கணக்கைச் சரிபார்க்கவும்",
         "account_menu_profile": "சுயவிவரம்",
         "account_menu_settings": "அமைப்புகள்",
         "account_menu_logout": "வெளியேறு"
+    },
+    "verification_page": {
+        "title": "கணக்கு சரிபார்ப்பு",
+        "description": "உங்கள் தயாரிப்புகளை விற்க மற்றும் பணம் பெற, உங்கள் அடையாளத்தைச் சரிபார்க்கவும்.",
+        "card_title": "ஆவணத்தைப் பதிவேற்றவும்",
+        "card_description": "இது அனைவருக்கும் பாதுகாப்பான சந்தையை பராமரிக்க எங்களுக்கு உதவுகிறது.",
+        "gov_id_label": "அரசு அடையாள அட்டை சரிபார்ப்பு",
+        "gov_id_description": "பாதுகாப்பை உறுதி செய்வதற்கும் மோசடியைத் தடுப்பதற்கும், தயவுசெய்து அரசு வழங்கிய அடையாள அட்டையை (எ.கா. ஆதார், பான்) பதிவேற்றவும்.",
+        "upload_prompt": "பதிவேற்ற கோப்பைக் கிளிக் செய்யவும் அல்லது இழுக்கவும்",
+        "submit_button": "சரிபார்ப்புக்குச் சமர்ப்பிக்கவும்"
     }
 }
