--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -49,9 +49,6 @@
         "email_placeholder": "m@example.com",
         "phone_label": "Phone Number",
         "phone_placeholder": "e.g., 9876543210",
-        "gov_id_label": "Government ID Verification",
-        "gov_id_description": "To ensure security and prevent fraud, please upload a government-issued ID (e.g., Aadhar, PAN).",
-        "upload_prompt": "Click or drag file to upload",
         "create_password_label": "Create Password",
         "confirm_password_label": "Confirm Password",
         "create_account_button": "Create Account",
@@ -65,8 +62,19 @@
         "menu_marketing": "Marketing Hub",
         "menu_support": "Support",
         "account_menu_label": "My Account",
+        "account_menu_verify": "Verify Account",
         "account_menu_profile": "Profile",
         "account_menu_settings": "Settings",
         "account_menu_logout": "Log out"
+    },
+    "verification_page": {
+        "title": "Account Verification",
+        "description": "To sell your products and receive payments, please verify your identity.",
+        "card_title": "Upload Document",
+        "card_description": "This helps us maintain a secure marketplace for everyone.",
+        "gov_id_label": "Government ID Verification",
+        "gov_id_description": "To ensure security and prevent fraud, please upload a government-issued ID (e.g., Aadhar, PAN).",
+        "upload_prompt": "Click or drag file to upload",
+        "submit_button": "Submit for Verification"
     }
 }
