--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -49,9 +49,6 @@
         "email_placeholder": "m@example.com",
         "phone_label": "ఫోను నంబరు",
         "phone_placeholder": "ఉదా., 9876543210",
-        "gov_id_label": "ప్రభుత్వ ID ధృవీకరణ",
-        "gov_id_description": "భద్రతను నిర్ధారించడానికి మరియు మోసాన్ని నివారించడానికి, దయచేసి ప్రభుత్వ-జారీ చేసిన IDని (ఉదా., ఆధార్, పాన్) అప్‌లోడ్ చేయండి.",
-        "upload_prompt": "అప్‌లోడ్ చేయడానికి ఫైల్‌పై క్లిక్ చేయండి లేదా లాగండి",
         "create_password_label": "పాస్‌వర్డ్‌ను సృష్టించండి",
         "confirm_password_label": "పాస్‌వర్డ్‌ను నిర్ధారించండి",
         "create_account_button": "ఖాతాను సృష్టించండి",
@@ -65,8 +62,19 @@
         "menu_marketing": "మార్కెటింగ్ హబ్",
         "menu_support": "మద్దతు",
         "account_menu_label": "నా ఖాతా",
+        "account_menu_verify": "ఖాతాను ధృవీకరించండి",
         "account_menu_profile": "ప్రొఫైల్",
         "account_menu_settings": "సెట్టింగ్‌లు",
         "account_menu_logout": "లాగ్ అవుట్"
+    },
+    "verification_page": {
+        "title": "ఖాతా ధృవీకరణ",
+        "description": "మీ ఉత్పత్తులను విక్రయించడానికి మరియు చెల్లింపులను స్వీకరించడానికి, దయచేసి మీ గుర్తింపును ధృవీకరించండి.",
+        "card_title": "పత్రాన్ని అప్‌లోడ్ చేయండి",
+        "card_description": "ఇది ప్రతిఒక్కరికీ సురక్షితమైన మార్కెట్‌ప్లేస్‌ను నిర్వహించడానికి మాకు సహాయపడుతుంది.",
+        "gov_id_label": "ప్రభుత్వ ID ధృవీకరణ",
+        "gov_id_description": "భద్రతను నిర్ధారించడానికి మరియు మోసాన్ని నివారించడానికి, దయచేసి ప్రభుత్వ-జారీ చేసిన IDని (ఉదా., ఆధార్, పాన్) అప్‌లోడ్ చేయండి.",
+        "upload_prompt": "అప్‌లోడ్ చేయడానికి ఫైల్‌పై క్లిక్ చేయండి లేదా లాగండి",
+        "submit_button": "ధృవీకరణ కోసం సమర్పించండి"
     }
 }
