the platform should be free of cost and remove 1% fee from the platform

--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -2,7 +2,7 @@
 {
     "homepage": {
         "title": "உங்கள் கைவினைக்கு AI மூலம் శక్తి அளியுங்கள்",
-        "subtitle": "Artisan உங்கள் தனித்துவமான படைப்புகளை விவரிக்கவும், விவரிக்கவும் மற்றும் விற்கவும் உதவும் புத்திசாலித்தனமான கருவிகளை வழங்குகிறது. உங்கள் கலையில் கவனம் செலுத்துங்கள், நாங்கள் வார்த்தைகளைக் கையாளுவோம். உங்கள் வேலைக்கு அதிகபட்ச மதிப்பைப் பெறுவதை உறுதிசெய்ய நாங்கள் குறைந்தபட்சம் 1% கட்டணம் வசூலிக்கிறோம்.",
+        "subtitle": "Artisan உங்கள் தனித்துவமான படைப்புகளை விவரிக்கவும், விவரிக்கவும் மற்றும் விற்கவும் உதவும் புத்திசாலித்தனமான கருவிகளை வழங்குகிறது. உங்கள் கலையில் கவனம் செலுத்துங்கள், நாங்கள் வார்த்தைகளைக் கையாளுவோம். கைவினைஞர்களுக்கு இந்த தளம் முற்றிலும் இலவசம்.",
         "artisans_button": "கைவினைஞர்களுக்காக",
         "buyers_button": "வாங்குபவர்களுக்காக",
         "login": "உள்நுழை",
