--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -2,7 +2,7 @@
 {
     "homepage": {
         "title": "আপনার শিল্পকে AI দিয়ে শক্তিশালী করুন",
-        "subtitle": "Artisan আপনার অনন্য সৃষ্টি বর্ণনা করতে, বর্ণনা করতে এবং বিক্রি করতে সাহায্য করার জন্য বুদ্ধিমান সরঞ্জাম সরবরাহ করে। আপনার শিল্পে মনোযোগ দিন, আমরা শব্দগুলি পরিচালনা করব। আপনি আপনার কাজের জন্য সর্বোচ্চ মূল্য পান তা নিশ্চিত করতে আমরা একটি ন্যূনতম 1% ফি চার্জ করি।",
+        "subtitle": "Artisan আপনার অনন্য সৃষ্টি বর্ণনা করতে, বর্ণনা করতে এবং বিক্রি করতে সাহায্য করার জন্য বুদ্ধিমান সরঞ্জাম সরবরাহ করে। আপনার শিল্পে মনোযোগ দিন, আমরা শব্দগুলি পরিচালনা করব। কারিগরদের জন্য প্ল্যাটফর্মটি সম্পূর্ণ বিনামূল্যে।",
         "artisans_button": "কারিগরদের জন্য",
         "buyers_button": "ক্রেতাদের জন্য",
         "login": "লগইন",
