--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -2,7 +2,7 @@
 {
     "homepage": {
         "title": "Empower Your Craft with AI",
-        "subtitle": "Artisan provides intelligent tools to help you describe, narrate, and sell your unique creations. Focus on your art, we'll handle the words. We charge a minimal 1% fee to ensure you get the maximum value for your work.",
+        "subtitle": "Artisan provides intelligent tools to help you describe, narrate, and sell your unique creations. Focus on your art, we'll handle the words. The platform is completely free for artisans.",
         "artisans_button": "For Artisans",
         "buyers_button": "For Buyers",
         "login": "Login",
