--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -2,7 +2,7 @@
 {
     "homepage": {
         "title": "AI के साथ अपनी कला को सशक्त बनाएं",
-        "subtitle": "आर्टिसन आपको अपनी अनूठी रचनाओं का वर्णन करने, सुनाने और बेचने में मदद करने के लिए बुद्धिमान उपकरण प्रदान करता है। अपनी कला पर ध्यान केंद्रित करें, हम शब्दों को संभाल लेंगे। हम यह सुनिश्चित करने के लिए न्यूनतम 1% शुल्क लेते हैं कि आपको अपने काम का अधिकतम मूल्य मिले।",
+        "subtitle": "आर्टिसन आपको अपनी अनूठी रचनाओं का वर्णन करने, सुनाने और बेचने में मदद करने के लिए बुद्धिमान उपकरण प्रदान करता है। अपनी कला पर ध्यान केंद्रित करें, हम शब्दों को संभाल लेंगे। कारीगरों के लिए मंच पूरी तरह से मुफ्त है।",
         "artisans_button": "कारीगरों के लिए",
         "buyers_button": "खरीदारों के लिए",
         "login": "लॉग इन करें",
