--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -43,6 +43,7 @@
     "signup_page": {
         "title": "ఖాతాను సృష్టించండి",
         "description": "ప్రత్యేకమైన చేతిపనులను విక్రయించడం లేదా కొనడం ప్రారంభించడానికి ఆర్టిసాన్‌లో చేరండి.",
+        "avatar_label": "ఒక ప్రొఫైల్ చిత్రాన్ని అప్‌లోడ్ చేయండి",
         "username_label": "వినియోగదారు పేరు",
         "username_placeholder": "ఉదా., ArtisanPriya",
         "email_label": "ఇమెయిల్",
